# ros2-docking

./: README.md  Technical_Manual.md
packages_ros2/econ_docking/: econ-docking_1.0.bb
packages_ros2/econ_docking/files/econ_docking/: CMakeLists.txt  package.xml
packages_ros2/econ_docking/files/econ_docking/config/: calibration_chessboard.yaml  corridor_starting_pt.yaml  staging_waypoints.yaml
packages_ros2/econ_docking/files/econ_docking/launch/: econ_aruco_docking.launch.py
packages_ros2/econ_docking/files/econ_docking/src/: aruco_marker_detector.cpp  aruco_marker_pose_estimation_tf.cpp  battery_monitor_and_docking.cpp  navigate_to_charging_dock_no_nav2.cpp
packages_ros2/econlidar/: econlidar_1.0.bb
packages_ros2/econlidar/files/econlidar/: CMakeLists.txt  package.xml
packages_ros2/econlidar/files/econlidar/launch/: battery_waypoint_docking_launch.py
packages_ros2/econlidar/files/econlidar/src/: battery_monitor_and_navigate_docking.cpp
