<?xml version="1.0"?>
<package format="3">
  <name>econ_docking</name>
  <version>1.0.0</version>
  <description>ECON Rover Docking - ArUco marker detection and autonomous navigation</description>

  <maintainer email="thagasheriff@e-consystems.com">E-Con Systems</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>rclcpp_action</depend>
  <depend>builtin_interfaces</depend>
  <depend>ros2_base_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
