<?xml version="1.0"?>
<package format="3">
  <name>econlidar</name>
  <version>0.0.0</version>
  <description>A ROS2 package for subscribing to LIDAR data and calculating distances.</description>
  <maintainer email="thagasheriff@e-consystems.com">tsm02</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
